# opentelemetry-rust-contrib

./: Cargo.toml
opentelemetry-datadog/: Cargo.toml
opentelemetry-datadog-api/: Cargo.toml  build.rs  rust-toolchain.toml
opentelemetry-datadog-api/proto/: README.md  agent_payload.proto  tracer_payload.proto
opentelemetry-datadog-api/src/: lib.rs
opentelemetry-datadog-api/src/exporter/: mod.rs
opentelemetry-datadog-api/src/exporter/model/: mod.rs
opentelemetry-datadog/src/exporter/: mod.rs
opentelemetry-etw-logs/src/logs/: reentrant_logprocessor.rs
opentelemetry-stackdriver/: Cargo.toml
opentelemetry-user-events-logs/src/logs/: reentrant_logprocessor.rs
opentelemetry-zpages/src/trace/: span_processor.rs
