[workspace]
members = [
    "opentelemetry-*",
    "examples/*",
]
resolver = "2"

[profile.bench]
# https://doc.rust-lang.org/cargo/reference/profiles.html#bench
# See function names in profiling reports.
# 2/true is too much, 0 is not enough, 1 is just right for back traces
debug = 1

[workspace.dependencies]
opentelemetry = "0.24"
opentelemetry-appender-tracing = "0.5"
opentelemetry-http = "0.13"
opentelemetry-proto = { version = "0.7", default-features = false }
opentelemetry_sdk = { version = "0.24", default-features = false }
opentelemetry-stdout = "0.5"
opentelemetry-semantic-conventions = "0.16"

[patch.crates-io]
opentelemetry = { git = "https://github.com/grafbase/opentelemetry-rust", rev = "a8c0bbe60797f76ca72738debe40a206efc2f8d0" } # http-v1-as-any-rebased
opentelemetry_sdk = { git = "https://github.com/grafbase/opentelemetry-rust", rev = "a8c0bbe60797f76ca72738debe40a206efc2f8d0" } # http-v1-as-any-rebased
opentelemetry-http = { git = "https://github.com/grafbase/opentelemetry-rust", rev = "a8c0bbe60797f76ca72738debe40a206efc2f8d0" } # http-v1-as-any-rebased
