[workspace]
members = [
    "opentelemetry-aws",
    "opentelemetry-contrib",
    "opentelemetry-datadog",
    "opentelemetry-datadog-api",
    "opentelemetry-stackdriver",
    "opentelemetry-user-events-logs",
    "opentelemetry-user-events-metrics",
    "opentelemetry-zpages",
    # "examples/traceresponse",
    "opentelemetry-etw-metrics",
]
exclude = [
    "opentelemetry-datadog",
    "opentelemetry-datadog-api",
    "opentelemetry-stackdriver",
]
resolver = "2"

[profile.bench]
# https://doc.rust-lang.org/cargo/reference/profiles.html#bench
# See function names in profiling reports.
# 2/true is too much, 0 is not enough, 1 is just right for back traces
debug = 1

[workspace.dependencies]
opentelemetry = "0.22"
opentelemetry-appender-tracing = "0.3"
opentelemetry-http = "0.11"
opentelemetry-proto = { version = "0.5", default-features = false }
opentelemetry_sdk = { version = "0.22", default-features = false }
opentelemetry-stdout = "0.3"
opentelemetry-semantic-conventions = "0.14"

[patch.crates-io]
reqwest = { git = "https://github.com/grafbase/reqwest", rev = "5e254a782ed4199cb04b8d8f8659891ab944d419" } # 0.12-with-patches
opentelemetry = { git = "https://github.com/grafbase/opentelemetry-rust", rev = "b806493aa9d6c2904466b82a6a215de3eb4139c3" } # http-v1-as-any-rebased
opentelemetry_sdk = { git = "https://github.com/grafbase/opentelemetry-rust", rev = "b806493aa9d6c2904466b82a6a215de3eb4139c3" } # http-v1-as-any-rebased
opentelemetry-http = { git = "https://github.com/grafbase/opentelemetry-rust", rev = "b806493aa9d6c2904466b82a6a215de3eb4139c3" } # http-v1-as-any-rebased
