[package]
name = "opentelemetry-datadog"
version = "0.10.0"
description = "Datadog exporters and propagators for OpenTelemetry"
homepage = "https://github.com/open-telemetry/opentelemetry-rust-contrib/tree/main/opentelemetry-datadog"
repository = "https://github.com/open-telemetry/opentelemetry-rust-contrib/tree/main/opentelemetry-datadog"
readme = "README.md"
categories = [
    "development-tools::debugging",
    "development-tools::profiling",
]
keywords = ["opentelemetry", "tracing"]
license = "Apache-2.0"
edition = "2021"
rust-version = "1.65"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
reqwest-blocking-client = ["reqwest/blocking", "opentelemetry-http/reqwest"]
reqwest-client = ["reqwest", "opentelemetry-http/reqwest"]

[dependencies]
futures-core = "0.3"
http = "1.0"
indexmap = "2.0"
itertools = "0.12"
once_cell = "1.12"
opentelemetry = { workspace = true, features = ["trace"] }
opentelemetry_sdk = { workspace = true, features = ["trace"] }
opentelemetry-http = { workspace = true }
opentelemetry-semantic-conventions = { workspace = true }
reqwest = { version = "0.12", default-features = false, optional = true }
rmp = "0.8"
surf = { version = "2.0", default-features = false, optional = true }
thiserror = "1.0"
url = "2.2"

[dev-dependencies]
async-trait = "0.1"
base64 = "0.13"
bytes = "1"
futures-util = { version = "0.3", default-features = false, features = ["io"] }
isahc = "1.4"
opentelemetry_sdk = { workspace = true, features = ["trace", "testing"] }

[[example]]
name = "datadog"
path = "examples/datadog.rs"
